# editty

./: .gitignore  CHANGELOG.md  README.md  editty.cabal
app/: Main.hs
client/: elm.json  index.html  main.js
client/src/: Doc.elm  Main.elm
client/src/Doc/: Operation.elm
client/tests/: DocTests.elm
migrations/: init.sql
src/Document/: Api.hs  App.hs  Change.hs  Data.hs  Db.hs  Get.hs  OT.hs
src/Document/Change/: Data.hs
test/: Spec.hs
