cabal-version:      2.4
name:               editty
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yerbol Altynbek
maintainer:         ealtynbek089@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable editty
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , document
                    , websockets
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: ConstraintKinds
                        DeriveAnyClass
                        DeriveGeneric
                        DerivingStrategies
                        GeneralizedNewtypeDeriving
                        LambdaCase
                        OverloadedStrings
                        RecordWildCards
                        OverloadedRecordDot
                        ScopedTypeVariables

library document
    hs-source-dirs: src
    exposed-modules: Document.Change
                     Document.Api
    other-modules:    Document.OT
                      Document.Db
                      Document.App
    build-depends:    base ^>=4.16.3.0
                    , aeson
                    , bytestring
                    , websockets
                    , free
                    , text
                    , mtl
                    , resource-pool
                    , postgresql-simple
    default-language: Haskell2010
    default-extensions: ConstraintKinds
                        DeriveAnyClass
                        DeriveGeneric
                        DerivingStrategies
                        GeneralizedNewtypeDeriving
                        LambdaCase
                        OverloadedStrings
                        RecordWildCards
                        OverloadedRecordDot
                        ScopedTypeVariables